--- a/Machine Learning Algorithms/svm_cross_val .ipynb
+++ b/Machine Learning Algorithms/svm_cross_val .ipynb
@@ -2,39 +2,30 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "LmU-rOUou1Br"
       },
       "outputs": [],
       "source": [
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
         "import sklearn\n",
         "import os\n",
-        "from PIL import Image\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.model_selection import train_test_split\n",
         "import cv2\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
-        "from sklearn.metrics import roc_curve, auc\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.svm import SVC\n",
         "from sklearn.model_selection import cross_val_score, KFold"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q5isXmIUu16-",
-        "outputId": "e42cab24-cb56-4098-9813-4473d7b514ca"
+        "outputId": "3ee321c8-cc28-44b7-b7ab-7385b9a4feb9"
       },
       "outputs": [
         {
@@ -46,36 +37,17 @@
         }
       ],
       "source": [
-        "#from google.colab import drive\n",
-        "#drive.mount('/content/drive')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6M-dkliKu5NO",
-        "outputId": "54102cdc-08a0-4ccc-8711-6a774725aa17"
+        "id": "6M-dkliKu5NO"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Subfolder: Non_Autistic, Total Images: 1327\n",
-            "Subfolder: Autistic_flipped, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_flipped, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_noise, Total Images: 1327\n",
-            "Subfolder: Autistic_noise, Total Images: 1327\n",
-            "Subfolder: Autistic_rotate, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_rotate, Total Images: 1327\n",
-            "Subfolder: Autistic, Total Images: 1327\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset_path = '/content/drive/MyDrive/autistic_dataset/train'\n",
         "\n",
@@ -124,41 +96,20 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "74lRF1ggu_g-",
-        "outputId": "02d02d5e-f2fb-41b2-e420-65d021a0e994"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cross-Validation Scores: [0.86737001 0.88319518 0.87038433 0.87905049]\n",
-            "Mean Accuracy: 0.875\n"
-          ]
-        }
-      ],
-      "source": [
-        "svm_model = SVC(C=1, gamma='scale',kernel='rbf',probability=True,random_state=12)\n",
-        "\n",
-        "\n",
-        "cv = KFold(n_splits=5, shuffle=True,random_state=12)\n",
-        "cross_val_scores = cross_val_score(svm_model, data.reshape(len(data), -1), labels, cv=cv, scoring='accuracy')\n",
-        "\n",
-        "print(\"Cross-Validation Scores:\",cross_val_scores)\n",
-        "print(\"Mean Accuracy:\",np.mean(cross_val_scores))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wk-htNxGvA5-"
+        "id": "74lRF1ggu_g-"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "svm_model = SVC(C=1, gamma='scale', kernel='rbf', probability=True, random_state=12)\n",
+        "\n",
+        "#Perform Cross Validation\n",
+        "cv = KFold(n_splits=4, shuffle=True, random_state=12)\n",
+        "cross_val_scores = cross_val_score(svm_model, data.reshape(len(data), -1), labels, cv=cv, scoring='accuracy')\n",
+        "\n",
+        "# Print the cross-validation scores\n",
+        "print(\"Cross-Validation Scores:\", cross_val_scores)\n",
+        "print(\"Mean Accuracy:\", np.mean(cross_val_scores))"
+      ]
     }
   ],
   "metadata": {
