--- a/Machine Learning Algorithms/grd_bst_clf.ipynb
+++ b/Machine Learning Algorithms/grd_bst_clf.ipynb
@@ -9,20 +9,12 @@
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import sklearn\n",
     "import os\n",
-    "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "import cv2\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
-    "from sklearn.metrics import roc_curve, auc\n",
-    "\n"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix"
    ]
   },
   {
@@ -41,7 +33,7 @@
     }
    ],
    "source": [
-    "dataset_path = \"C:\\\\Users\\\\arist\\\\Desktop\\\\article machine learning\\\\Kaggle-Autism-master\\\\train\"\n",
+    "dataset_path = '/content/drive/MyDrive/autistic_dataset/train'\n",
     "\n",
     "\n",
     "subfolders = os.listdir(dataset_path)\n",
@@ -64,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sample_size = 7962\n",
+    "\n",
     "data_folder = dataset_path\n",
     "image_size = (128, 128)\n",
     "data = []\n",
