--- a/Machine Learning Algorithms/svm_cross_val .ipynb
+++ b/Machine Learning Algorithms/svm_cross_val .ipynb
@@ -19,37 +19,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "q5isXmIUu16-",
-        "outputId": "3ee321c8-cc28-44b7-b7ab-7385b9a4feb9"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "6M-dkliKu5NO"
       },
       "outputs": [],
       "source": [
-        "dataset_path = '/content/drive/MyDrive/autistic_dataset/train'\n",
+        "dataset_path = '/content/'\n",
         "\n",
         "\n",
         "subfolders = os.listdir(dataset_path)\n",
@@ -102,11 +78,10 @@
       "source": [
         "svm_model = SVC(C=1, gamma='scale', kernel='rbf', probability=True, random_state=12)\n",
         "\n",
-        "#Perform Cross Validation\n",
-        "cv = KFold(n_splits=4, shuffle=True, random_state=12)\n",
+        "\n",
+        "cv = KFold(n_splits=5, shuffle=True, random_state=12)\n",
         "cross_val_scores = cross_val_score(svm_model, data.reshape(len(data), -1), labels, cv=cv, scoring='accuracy')\n",
         "\n",
-        "# Print the cross-validation scores\n",
         "print(\"Cross-Validation Scores:\", cross_val_scores)\n",
         "print(\"Mean Accuracy:\", np.mean(cross_val_scores))"
       ]
