update hyper parameters

--- a/Machine Learning Algorithms/grd_bst_clf.ipynb
+++ b/Machine Learning Algorithms/grd_bst_clf.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "dataset_path = '/content/drive/MyDrive/autistic_dataset/train'\n",
+    "dataset_path = '/content'\n",
     "\n",
     "\n",
     "subfolders = os.listdir(dataset_path)\n",
