--- a/Machine Learning Algorithms/grd_bst_clf_cross_val.ipynb
+++ b/Machine Learning Algorithms/grd_bst_clf_cross_val.ipynb
@@ -13,7 +13,6 @@
         "import numpy as np\n",
         "import sklearn\n",
         "import os\n",
-        "from sklearn.metrics import accuracy_score\n",
         "import cv2\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.metrics import accuracy_score"
@@ -21,32 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "id": "B8hBzwZkcpbJ",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B8hBzwZkcpbJ",
-        "outputId": "7d79258d-a646-4c5d-e28a-ae4e368b9dee"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "05ac4cd9",
       "metadata": {
         "colab": {
@@ -55,26 +29,9 @@
         "id": "05ac4cd9",
         "outputId": "f66683e3-e822-4dc9-e7e5-e7bc5c8ac105"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Subfolder: Non_Autistic, Total Images: 1327\n",
-            "Subfolder: Autistic_flipped, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_flipped, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_noise, Total Images: 1327\n",
-            "Subfolder: Autistic_noise, Total Images: 1327\n",
-            "Subfolder: Autistic_rotate, Total Images: 1327\n",
-            "Subfolder: Non_Autistic_rotate, Total Images: 1327\n",
-            "Subfolder: Autistic, Total Images: 1327\n",
-            "Subfolder: Autistic_crop, Total Images: 1317\n",
-            "Subfolder: Non_Autistic_crop, Total Images: 1326\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "dataset_path = '/content/drive/MyDrive/autistic_dataset/train'\n",
+        "dataset_path = '/content'\n",
         "\n",
         "subfolders = os.listdir(dataset_path)\n",
         "\n",
