--- a/Machine Learning Algorithms/rnd_clf_cross_val.ipynb
+++ b/Machine Learning Algorithms/rnd_clf_cross_val.ipynb
@@ -13,21 +13,8 @@
         "import numpy as np\n",
         "import sklearn\n",
         "import os\n",
-        "from sklearn.metrics import accuracy_score\n",
         "import cv2\n",
         "from sklearn.model_selection import cross_val_score\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "w3gYqnRwJp1V"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -38,7 +25,7 @@
       },
       "outputs": [],
       "source": [
-        "dataset_path = \"/content/drive/MyDrive/autistic_dataset/train\"\n",
+        "dataset_path = \"/content\"\n",
         "\n",
         "\n",
         "subfolders = os.listdir(dataset_path)\n",
@@ -114,15 +101,6 @@
         "\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3iuD-wKxJkWK"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
