--- a/Preproccesing/crop.ipynb
+++ b/Preproccesing/crop.ipynb
@@ -1,43 +1,5 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Cep7NaBR1wlv",
-        "outputId": "85027885-ec79-449d-caa1-4f35d6640eeb"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -109,16 +71,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4CPSf4891tin"
+      },
+      "outputs": [],
       "source": [
         "input_path = \"/content\"\n",
         "output_path = \"/content/\"\n",
         "face_cropping_algorithm(input_path, output_path)"
-      ],
-      "metadata": {
-        "id": "4CPSf4891tin"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
